--- a/package.json
+++ b/package.json
@@ -6,33 +6,54 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
-    "server": "nodemon server/server.js"
+    "server": "nodemon server/server.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-async-to-generator": "^7.1.0",
+    "@babel/runtime": "^7.1.2",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "express": "^4.18.1",
+    "jest-environment-jsdom": "^27.3.1",
     "mongoose": "^6.3.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-test-utils": "^0.0.1",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
+    "@shelf/jest-mongodb": "^2.2.2",
+    "babel-jest": "^28.0.3",
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.3.1",
+    "jest-puppeteer": "^3.4.0",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.16",
+    "puppeteer": "^1.9.0",
+    "react-test-renderer": "^17.0.2",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "supertest": "^3.3.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
+  },
+  "jest": {
+    "verbose": true,
+    "preset": "@shelf/jest-mongodb"
   }
 }
